--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -9,14 +9,9 @@
     <h4 class="display-5">Maintain Customers</h4>
 </div>
 <body>
-    <div class="Notes">
-        <label for="customerName" class="Label">Customer Name:</label>
-      <input type="text" class="NotesInput" id="customerName" name="customerName"/>
-  </div>
-    <div class="Gap2"></div>
-    <div class="searchDropdown2">
-        <label for="lob" class="Label">Line Of buss:</label>
-        <select class="form-control dropDownInput2" id="lob" name="lob"></select>
+    <div class="searchInput2">
+         <label for="customerName" class="Label">Customer Name:</label>
+      <input type="text" class="input2" id="customerName" name="customerName"/>
     </div>
 </body>
 <table id="customers"></table>
@@ -112,13 +107,6 @@
        $("#supplierName").on('change keyup paste', function () {
            SearchBySupplierName();
        });
-
-        $(document).ready(function () {
-                    var s = '';
-                    s += '<option value="0"> Liquor </option>';
-                    s += '<option value="1"> Cannabis </option>';
-            $("#lob").html(s);
-        });
     function SearchBySupplierName()
     {
         //  Fetch the text from our <input> control
