-fixes to header Cannabis order entry

--- a/Views/CannabisOrderEntry/Index.cshtml
+++ b/Views/CannabisOrderEntry/Index.cshtml
@@ -306,7 +306,7 @@
                         $('#specialInstructions').val(data.specialInstructions);
                         $('#supplier').val(data.supplier);
                         if(data.customerOrderStatus==1) {
-                            $('#receivedDate').val(data.dateReceived);
+                            $('#dateOrdered').val(data.dateOrdered);
                         } else if (data.customerOrderStatus) {
                             $('#receivedDate').val(data.dateReceived);
                             $('#dateOrdered').val(data.dateOrdered);
