-Cannabis order entry header updating on changes -on removal of last details header deleted too - fixed customer page not loading in all customers - customer summary cannabis make LOB hidden - product cannabis page supplier dropdown load in right - Customer summery add mbll to customer drop down -diabling supplier change if detail is created for the header

--- a/Views/CannabisCustSumm/Index.cshtml
+++ b/Views/CannabisCustSumm/Index.cshtml
@@ -94,7 +94,7 @@
                         label: 'Order Date', name: 'orderDate', fixed: true, width: 120, formatter: 'date', formatoptions: { newformat: 'Y-m-d' },  editable: true
                     },
                   // { label: 'Delivery Date',name: 'delveryDate',fixed:true,width:120,editoptions: { readonly: 'readonly'}},
-                   { label: 'LOB', name: 'lobCode', fixed: true, width: 100, editoptions: { readonly: 'readonly' } },
+                  { label: 'LOB', name: 'lobCode',hidden:true, fixed: true, width: 100, editoptions: { readonly: 'readonly' } },
                    { label: 'Order Number',name: 'orderNumber',fixed:true,width:100,editoptions: { readonly: 'readonly'}},
                    { label: 'Customer',name: 'customer',fixed:true,width:200,editoptions: { readonly: 'readonly'}},
                    { label: 'City',name: 'city',fixed:true,width:100,editoptions: { readonly: 'readonly'}},
