--- a/Views/invAdj/Index.cshtml
+++ b/Views/invAdj/Index.cshtml
@@ -184,6 +184,7 @@
                    if(data!=null)
                    {
                       header= true;
+                      alert(data.date);
                       $("#saCode").val(data.sacode);
                       $("#date").val(data.date);
                       $("#comments").val(data.comments);
