--- a/Views/CannabisOrderEntry/Index.cshtml
+++ b/Views/CannabisOrderEntry/Index.cshtml
@@ -9,6 +9,7 @@
     <h4 class="display-5">Cannabis Order Entry</h4>
 </div>
 <body>
+<div id="searchHeader">
     <div class="searchDate">
         <label for="dateOrdered" class="Label">Date Ordered:</label>
         <input type="date" id='dateOrdered' class="Date" name="dateOrdered" />
@@ -52,7 +53,7 @@
         <label for="customerOrderStatus" class="Label">Order Status:</label>
         <select class="form-control dropDownInput" id="customerOrderStatus" name="customerOrderStatus"></select>
     </div>
-
+</div>
 </body>
 <table id="CannabisOrderEntry"></table>
 <div id="jqGridPager"></div>
@@ -101,7 +102,15 @@
                             keys: true,
                             editOptions: {},
                             addOptions: {},
-                            delOptions: { url: 'CannabisOrderEntry/Delete' }
+                            delOptions: {
+                                            url: 'CannabisOrderEntry/Delete',
+                                            afterComplete: function (){
+                                            var count = jQuery("#CannabisOrderEntry").jqGrid('getGridParam', 'records');
+                                            if(count<=1){
+                                                $('#supplier').attr("disabled", false);
+                                            }
+                                            }
+                                        }
                         }
                     },
                     { label: 'Customer Order Detail Id', name: 'customerOrderDtlsID', hidden: true, editable: true, editoptions: { readonly: 'readonly' }, key: true },
@@ -138,6 +147,7 @@
                 rowNum: 15,
                 pager: "#jqGridPager",
                 editurl: 'CannabisOrderEntry/Update',
+
 
             });
 
@@ -188,6 +198,7 @@
                         var orderNumber = $("#orderNumber").val();
                         var specialInstructions = $("#specialInstructions").val();
                         var supplier = $("#supplier").val();
+                        $('#supplier').attr("disabled", true);
                         $.ajaxSetup({ "async": false });
                         $.getJSON('CannabisOrderEntry/CreateHeader?data=' + customer + '/' + orderNumber + '/' + dateOrdered + '/' + customerOrderStatus +'/' + specialInstructions +  '/' + supplier + '/' + dateReceived, function () { });
                         $.ajaxSetup({ "async": true });
@@ -213,6 +224,9 @@
         //$("#customer").autocomplete({
         //    source: getCustomer()
         //});
+        $('#CannabisOrderEntry').change(function(){
+            alert("changed");
+        });
         $(document).ready(function () {
             $('#dateOrdered').val(date());
             $("#receivedDate").prop("readonly", true);
@@ -221,6 +235,29 @@
         });
         $("#newPage").on('click', function () {
             window.location.replace("CannabisOrderEntry");
+        });
+        $("#searchHeader").on('change', function () {
+                                    var customerOrderStatus = $("#customerOrderStatus").val();
+                        var dateOrdered="";
+                        var dateReceived="";
+                        var shippingDate="";
+                        if(customerOrderStatus==1){
+                            dateOrdered = $("#dateOrdered").val();
+                        }else if (customerOrderStatus==6){
+                            dateOrdered = $("#dateOrdered").val();
+                            dateReceived = $("#receivedDate").val();
+                        }else {
+                            dateOrdered = $("#dateOrdered").val();
+                            dateReceived = $("#receivedDate").val();
+                            shippingDate = $("#shippingDate").val();
+                        }
+                        var customer = $("#customer").val();
+                        var orderNumber = $("#orderNumber").val();
+                        var specialInstructions = $("#specialInstructions").val();
+                        var supplier = $("#supplier").val();
+                        $.ajaxSetup({ "async": false });
+                        $.getJSON('CannabisOrderEntry/CreateHeader?data=' + customer + '/' + orderNumber + '/' + dateOrdered + '/' + customerOrderStatus +'/' + specialInstructions +  '/' + supplier + '/' + dateReceived, function () { });
+                        $.ajaxSetup({ "async": true });
         });
         $("#customerOrderStatus").on('change', function () {
             var customerOrderStatus = $("#customerOrderStatus").val();
@@ -301,6 +338,7 @@
                 success: function (data) {
                     if (data != null) {
                         $("#customer").val(data.customer);
+                        $("#customer").selectpicker("refresh");
                         $('#orderNumber').val(data.orderNumber);
                         $('#customerOrderStatus').val(data.customerOrderStatus);
                         $('#specialInstructions').val(data.specialInstructions);
