--- a/wwwroot/css/searchHeader.css
+++ b/wwwroot/css/searchHeader.css
@@ -91,6 +91,10 @@ div.dropdown.bootstrap-select.searchDropdown2 {
     width: 66px;
     display: inline-block;
 }
+.Gap67 {
+    width: 56px;
+    display: inline-block;
+}
 .Gap2 {
     width: 45px;
     display: inline-block;
