--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -13,6 +13,15 @@
          <label for="customerName" class="Label">Customer Name:</label>
       <input type="text" class="input2" id="customerName" name="customerName"/>
     </div>
+@*  <div class="Notes">
+        <label for="customerName" class="Label">Customer Name:</label>
+      <input type="text" class="NotesInput" id="customerName" name="customerName" />
+    </div>
+    <div class="Gap2"></div>
+    <div class="searchDropdown2">
+        <label for="lob" class="Label">Line Of buss:</label>
+        <select class="form-control dropDownInput2" id="lob" name="lob"></select>
+    </div>*@
 </body>
 <table id="customers"></table>
 <div id="jqGridPager"></div>
@@ -46,8 +55,8 @@
                         }
                     },
                    { label: 'CustomerId', name: 'customerId',hidden:true,fixed:true, editable: true,edittype:"text",key:true},
-                   { label: 'MbllCustomerNo', name: 'mbllCustomerNo',fixed:true, editable: true,edittype:"text"},
-                   { label: 'Licence Number', name: 'licenceNumber',fixed:true, editable: true,width:120,editrules: { required: true }, edittype:"text"},
+                   { label: 'MbllCustomerNo', name: 'mbllCustomerNo',fixed:true, editable: true,edittype:"text",editrules: { required: true }},
+                   { label: 'Licence Number', name: 'licenceNumber',fixed:true, editable: true,width:120, edittype:"text"},
                    { label: 'Customer Name', name: 'name',fixed:true, editable: true,edittype:"text"},
                    { label: 'Address', name: 'address',fixed:true, editable: true,width:150, edittype:"text",editrules: { required: true },editoptions: {maxlength: 100} },
                    { label: 'City', name: 'city',fixed:true,editable: true,width:100,edittype:"text",editoptions: {maxlength: 100} },
@@ -62,13 +71,13 @@
                    { label: 'Phone3 Type', name: 'phone3Type',fixed:true,editable: true,edittype:"text",width:120 },
                    { label: 'Phone3', name: 'phone3',fixed:true,editable: true,edittype:"text",width:120,editrules:{custom:true, custom_func:IsPhoneNumber, number:true, required: false} },
                    { label: 'ContactEmail', name: 'contactEmail',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
-                   { label: 'Call Frequency', name: 'callFrequencyId',fixed:true,editable: true, width:150, edittype:"select",formatter:'select',editrules: { required: true},editoptions: {value:getCallFrequency(),maxlength: 100} },
+                   { label: 'Call Frequency', name: 'callFrequencyId',fixed:true,editable: true, width:150, edittype:"select",formatter:'select',editoptions: {value:getCallFrequency(),maxlength: 100} },
                    { label: 'Cdos', name: 'cdosId',fixed:true, width:150,editable: true, edittype:"select",formatter:'select',editrules: { required: true}, editoptions: {value: getCdos(),maxlength: 100} },
                    { label: 'Customer Source', name: 'customerSourceId',fixed:true,width:150,editable: true, edittype:"select",formatter:'select',editrules: { required: true}, editoptions: {value:getCustomerSource(),maxlength: 100} },
                    { label: 'Customer Status Code Navigation', name: 'customerStatusCode',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
                    { label: 'Customer Type Code Navigation', name: 'customerTypeCode',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
-                   { label: 'Segment', name: 'segmentId',fixed:true, width:150,editable: true, edittype:"select",formatter:'select',editrules: { required: true}, editoptions: {value:getSegment(),maxlength: 100} },
-                   { label: 'Territory', name: 'territoryId',fixed:true ,width:150,editable: true, edittype:"select",formatter:'select',editrules: { required: true}, editoptions: {value:getTerritory(),maxlength: 100} }
+                   { label: 'Segment', name: 'segmentId',fixed:true, width:150,editable: true, edittype:"select",formatter:'select', editoptions: {value:getSegment(),maxlength: 100} },
+                   { label: 'Territory', name: 'territoryId',fixed:true ,width:150,editable: true, edittype:"select",formatter:'select', editoptions: {value:getTerritory(),maxlength: 100} }
                    //{ label: 'Insert UserId', name: 'insertUserId',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
                    //{ label: 'Insert Timestamp', name: 'insertTimestamp',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
                    //{ label: 'Update UserId', name: 'updateUserId',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
@@ -77,6 +86,7 @@
 
                ],
                viewrecords: true,
+               multipleSearch: true,
                height: 500,
                rowNum: 20,
                pager: "#jqGridPager",
@@ -104,27 +114,53 @@
         
         $('#customers').setGridWidth(60);
 
-       $("#supplierName").on('change keyup paste', function () {
-           SearchBySupplierName();
+        $("#customerName").on('change keyup paste', function () {
+           Search();
        });
-    function SearchBySupplierName()
+       //$("#lob").on('change', function () {
+       //     SearchByLob();
+       // });
+       // $(document).ready(function () {
+       //     var s = '';
+       //     s += '<option value="0"> Liquor </option>';
+       //     s += '<option value="1"> Cannabis </option>';
+       //     $("#lob").html(s);
+       // });
+    function Search()
     {
         //  Fetch the text from our <input> control
-        var searchString = $("#name").val();
+            var searchString = $("#customerName").val();
+            //var lob = $("#lob").val();
 
         //  Prepare to pass a new search filter to our jqGrid
         var f = { groupOp: "AND", rules: [] };
 
         //  Remember to change the following line to reflect the jqGrid column you want to search for your string in
         //  In this example, I'm searching through the UserName column.
-
+       // f.rules.push({ field: "LOB", op: "cn", data: lob });
         f.rules.push({ field: "name", op: "cn", data: searchString });
-
         var grid = $('#customers');
         grid[0].p.search = f.rules.length > 0;
         $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
         grid.trigger("reloadGrid", [{ page: 1 }]);
     }
+        function SearchByLob() {
+            //  Fetch the text from our <input> control
+            var searchString = $("#lob").val();
+
+            //  Prepare to pass a new search filter to our jqGrid
+            var f = { groupOp: "AND", rules: [] };
+
+            //  Remember to change the following line to reflect the jqGrid column you want to search for your string in
+            //  In this example, I'm searching through the UserName column.
+
+            f.rules.push({ field: "LOB", op: "cn", data: searchString });
+
+            var grid = $('#customers');
+            grid[0].p.search = f.rules.length > 0;
+            $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
+            grid.trigger("reloadGrid", [{ page: 1 }]);
+        }
     
       function IsPhoneNumber(value,colname)
        {
