- fix to cannabis summary

--- a/Views/ReceivedCannabisOrder/Index.cshtml
+++ b/Views/ReceivedCannabisOrder/Index.cshtml
@@ -61,7 +61,7 @@
                             delOptions: { url: 'ReceivedCannabisOrder/Delete' }
                         }
                     },
-                    { label: 'Customer Order Detail Id', name: 'customerOrderDtlsID', editable: true, hidden: true, editoptions: { readonly: 'readonly' } }, key: true },
+                    { label: 'Customer Order Detail Id', name: 'customerOrderDtlsID', editable: true, hidden: true, editoptions: { readonly: 'readonly' }, key: true },
                     { label: 'Customer Order Id', name: 'customerOrderID', hidden: true, editable: true, editoptions: { readonly: 'readonly' } },
                     {
                         label: 'Product Desc', name: 'productDesc', fixed: true, width: 150, editable: false, editrules: { required: true, custom: true, custom_func: IsProduct },
