--- a/Views/CannabisCustSumm/Index.cshtml
+++ b/Views/CannabisCustSumm/Index.cshtml
@@ -236,6 +236,7 @@
         var endDate = $("#endDate").val();
         var startDate = $("#startDate").val();
         var Status = $("#StatusDropdown").val();
+        alert();
         var Customer = $("#customer").val();
         var OrderNum = $('#orderNumber').val();
         var Supplier = $('#supplier').val();
