--- a/Views/ProductCannabis/Index.cshtml
+++ b/Views/ProductCannabis/Index.cshtml
@@ -129,8 +129,8 @@
 
             });
             $.ajaxSetup( { "async": true } );
+            console.log(SupplierList);
            return SupplierList; 
-           
 
         }
 
