--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -55,10 +55,11 @@
                    { label: 'Product SKU',name: 'sku',fixed:true,width:100, editable: true, edittype:"text", editoptions: { maxlength: 50}, editrules: { required: true }},
 
 			       { label: 'Product Name',name: 'description',fixed:true,width:150, editable: true, edittype:"text", editoptions: { maxlength: 150}, editrules: { required: true }},
+                    { label: 'Product Name 2', name: 'description2', fixed: true, width: 150, editable: true, edittype: "text", editoptions: { maxlength: 150 }, editrules: { required: true } },
 
  			       { label: 'Product Id',name: 'productId',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
 
-                   { label: 'Supplier',name: 'supplierId',fixed:true,width:125, editable: true, edittype:"select",formatter: 'select', editoptions: {value: getSupplierNames()}},
+                    { label: 'Supplier', name: 'supplierId', fixed: true, width: 300, editable: true, edittype: "select", formatter: 'select', editoptions: { value: getSupplierNames() } },
 
                    { label: 'Single Weight',name: 'singleWeight',fixed:true,width:100, editable: true, edittype:"text", editoptions: { maxlength:15},editrules: { required: true }},
 
@@ -128,19 +129,19 @@
         grid.trigger("reloadGrid", [{ page: 1 }]);
     }
         function getSupplierNames() {
-          var SupplierList= {};
-
-        $.ajaxSetup( { "async": false } );
-        $.getJSON('Products/CreateList', function(data) {
-        if (data != null) {
-            for (var i = 0; i < data.length; i++) {
-             SupplierList[data[i].value]=data[i].text;
-              } 
-            }//if
+            var SupplierList = {};
+            $.ajaxSetup({ "async": false });
+            $.getJSON('Products/CreateList', function (data) {
+                if (data != null) {
+                    for (var i = 0; i < data.length; i++) {
+                        SupplierList[data[i].value] = data[i].text;
+                    }
+                }//if
 
             });
-            $.ajaxSetup( { "async": true } );
-           return SupplierList; 
+            $.ajaxSetup({ "async": true });
+            console.log(SupplierList);
+            return SupplierList;
 
         }
 
